fixed spacing

--- a/scss/ConvertKit/convertKit.scss
+++ b/scss/ConvertKit/convertKit.scss
@@ -70,7 +70,7 @@
     border: 2px solid #231942;
     border-radius: 4px 0 0 4px;
     background-color: #7C7093;
-    padding: 22px 9px 20px 9px;
+    padding: 22px 9px 19px 9px;
     color: #eeeeee;
   }
 
